# discovery

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.c  panel.c  verif_cookie.c  verif_html.c  verif_robot.c  verif_whois.c
dll/: config.ini  results.db
dll/history/: history.txt
dll/results/1.1.1.1/: cookies_2024-01-24_00-45-55.txt  security_2024-01-24_00-45-54.txt
dll/updater/: .gitignore  CMakeLists.txt
history/: history.txt
include/: enzo.h  panel.h  verif_cookie.h  verif_html.h  verif_robot.h  verif_whois.h
results/dealabs.com/: cookies_2024-01-25_08-22-58.txt  security_2024-01-25_08-22-57.txt  whois_2024-01-25_08-22-56.txt
results/google.fr/: cookies_2024-01-25_08-23-35.txt  robot_2024-01-25_02-34-51.txt  security_2024-01-25_02-34-51.txt  whois_2024-01-25_02-34-51.txt
src/: style.css
updater/: README.md  main.c
